Canvas grid adjustment methods

--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
                 Select the number of puzzle pieces
             </p>
 
+            <div id="pieces-settings">
+                <div id="decrease-grid-size-button" class="btn btn-primary">
+                    <span> - </span>
+                </div>
+
+                <div id="grid-size" class="well well-sm">
+                4 x 4
+                </div>
+
+                <div id="increase-grid-size-button" class="btn btn-primary">
+                    <span> + </span>
+                </div>
+            </div>
+
             <canvas id="processing-canvas" />
         </div>
 
