--- a/index.html
+++ b/index.html
@@ -66,6 +66,28 @@
             <canvas id="processing-canvas" />
         </div>
 
+        <div id="step-three-container" style="display: none;">
+            
+            <h3 class="page-header">Step 3</h3>
+
+            <p>
+                Enjoy your puzzle!
+            </p>
+
+            <div id="puzzle-controls">
+
+                <div class="btn btn-primary">
+                    <span>Reset</span>
+                </div>
+
+                <div class="btn btn-primary">
+                    <span>Scramble</span>
+                </div>
+
+            </div>
+
+        </div>
+
     </div>
 
 
