--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
         <!-- HammerJS -->
         <script src="http://hammerjs.github.io/dist/hammer.min.js"></script>
 
-        <!-- custom -->
-        <script src="js/utils.js"></script>
     </head>
     <body>
 
@@ -60,12 +58,13 @@
                 </div>
             </div>
 
-            <canvas id="processing-canvas" />
+            <canvas id="processing-canvas"></canvas>
 
 
+            <br/>
             <div id="create-puzzle-button" class="btn btn-primary">
-                    <span>Create puzzle</span>
-                </div>
+                <span>Create puzzle</span>
+            </div>
         </div>
 
         <div id="step-three-container" style="display: none;">
