Added buttons to increase / decrease the grid size as a whole

--- a/index.html
+++ b/index.html
@@ -48,19 +48,24 @@
             <div id="pieces-settings">
 
                 <div class="grid-size-wrapper">
-                    <button id="increase-grid-rows-button" class="grid-button arrow-up"></button>
-                    <div id="grid-size-rows" class="grid-size well well-sm">3</div>
-                    <button id="decrease-grid-rows-button" class="grid-button arrow-down"></button>
+
+                    <button id="decrease-grid-size-button" class="grid-button arrow-left" style="left: 0px; top: 39px;"></button>
+
+                    <button id="increase-grid-rows-button" class="grid-button arrow-up" style="left: 39px; top: 0px;"></button>
+                    <div id="grid-size-rows" class="grid-size well well-sm" style="left: 34px; top: 34px;">3</div>
+                    <button id="decrease-grid-rows-button" class="grid-button arrow-down" style="left: 39px; top: 78px;"></button>
                 </div>
 
-                <div class="grid-size-wrapper">
+                <div class="grid-size-wrapper" style="width: 40px;">
                     <div class="grid-or-sign">&times;</div>
                 </div>
 
                 <div class="grid-size-wrapper">
-                    <button id="increase-grid-columns-button" class="grid-button arrow-up"></button>
-                    <div id="grid-size-columns" class="grid-size well well-sm">3</div>
-                    <button id="decrease-grid-columns-button" class="grid-button arrow-down"></button>
+                    <button id="increase-grid-columns-button" class="grid-button arrow-up" style="left: 5px; top: 0px;"></button>
+                    <div id="grid-size-columns" class="grid-size well well-sm" style="left: 0px; top: 34px;">3</div>
+                    <button id="decrease-grid-columns-button" class="grid-button arrow-down" style="left: 5px; top: 78px;"></button>
+
+                    <button id="increase-grid-size-button" class="grid-button arrow-right" style="left: 44px; top: 39px;"></button>
                 </div>
 
             </div>
