A crude version of the puzzle is drawn on the screen

--- a/index.html
+++ b/index.html
@@ -106,11 +106,10 @@
                         <div class="btn btn-primary">
                             <span>Scramble</span>
                         </div>
-
-                        <div id="puzzle-container">
-                        </div>
-
                     </div>
+
+                    <br/>
+                    <div id="puzzle-container"></div>
                 </div>
             </div>
         </div>
